--- a/sign-in.html
+++ b/sign-in.html
@@ -36,21 +36,21 @@
     </div>
     <div class="iptbox">
     	<label>密码</label>
-        <input name="" type="text" placeholder="请输入密码">
+        <input name="" class="pw" type="password" placeholder="请输入密码">
     </div>
-    <div class="mg-0-15">
-    	<i class="fColor1"><br>提示：如忘记密码，请通过投哪网PC网站找回(touna.cn)</i>
-        <i class="fColor1"><br>该手机对应多个用户名，请选择其中一个登录<br><br></i>
-        <div class="userIdBox">
-        	<em>id11111111</em>
+    <div class="mg-0-15">   	
+        <div class="userIdBox" style="display: none;">
+            <i class="fColor1"><br>提示：如忘记密码，请通过投哪网PC网站找回(touna.cn)</i>
+            <i class="fColor1"><br>该手机对应多个用户名，请选择其中一个登录<br><br></i>
+        	<!-- <em>id11111111</em>
         	<aside>
             	<i>id22222</i>
                 <i>id333333</i>
                 <i>id5555555</i>
-            </aside>
+            </aside> -->
         </div>
         <br><br>
-        <button class="btnBlueBig loginBtn">登录</button>
+        <button id="loginBtn" class="btnBlueBig">登录</button>
         <br>
         <a href="sign-up.html" class="fs14">没有帐号？立即注册，领现金奖！</a>
     </div>
@@ -65,7 +65,21 @@
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
 </footer>
-<script src="js/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.md5.js"></script>
 <script src="js/common.js" type="text/javascript"></script>
+<script type="text/javascript">
+    /* if login */
+    Webapp.postLoadData('/auth.do', {'method': 'isLogin'},
+        function(data) {
+            console.log(data);
+            if(data.result) {
+                window.location.href = '/wap/user-account.html';
+            }
+        }, 
+        function(e) {
+            console.log(e);
+    });
+</script>
 </body>
 </html>
