--- a/about-touna.html
+++ b/about-touna.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 	<a class="returnBack" onClick="history.go(-1);"></a>
-<h2 class="pageTitle">关于投哪</h2>
+<h2 class="pageTitle">关于投哪网</h2>
 	<nav class="menu">
     	<div>
         	<a href="index.html">首页</a>
@@ -18,10 +18,17 @@
             <a href="sign-in.html">登录</a>
             <a href="guide-line.html">指南</a>
             <a href="tel:4009099888">问客服</a>
-            <a href="">下载APP</a>
-            <i></i>
+            <a href="" class="app-link">下载APP</a>
         </div>
-	</nav>
+        <div>
+        	<a href="index.html">首页</a>
+            <a href="guide-line.html">指南</a>
+            <a href="tel:4009099888">问客服</a>
+            <a href="user-account.html">我的账户</a>
+            <a href="javascript:;">退出账户</a>
+            <a href="" class="app-link">下载APP</a>
+        </div>
+    </nav>
 </header>
 <section class="mod mg-15-5">
 	<article class="text-common"><img src="images/about-touna-pic.jpg" width="100%"></article>
@@ -35,7 +42,8 @@
     Copyright Reserved 2011-2015<br>
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
 </footer>
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/common.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/navigation.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
