增加统计代码和首页数据接口调用

--- a/guide-line.html
+++ b/guide-line.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 	<a class="returnBack" onClick="history.go(-1);"></a>
-  <h2 class="pageTitle">投哪指南</h2>
+<h2 class="pageTitle">投哪指南</h2>
 	<nav class="menu">
     	<div>
         	<a href="index.html">首页</a>
@@ -56,5 +56,14 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/navigation.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
