--- a/sign-in.html
+++ b/sign-in.html
@@ -54,7 +54,7 @@
         <br><br>
         <button id="loginBtn" class="btnBlueBig">登录</button>
         <br>
-        <a href="sign-up.html" class="fs14">没有帐号？立即注册，领现金奖！</a>
+        <a href="sign-up.html" class="fs14 fColor3">没有账号？立即注册，有钱送！</a>
     </div>
 </div>
 <aside class="guide-DLApp">
@@ -83,6 +83,15 @@
         function(e) {
             console.log(e);
     });
+</script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
 </script>
 </body>
 </html>
