--- a/user-account.html
+++ b/user-account.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 	<a class="returnBack" onClick="history.go(-1);"></a>
-    <h2 class="pageTitle">我的账户</h2>
+  <h2 class="pageTitle">我的账户</h2>
 	<nav class="menu">
     	<div>
         	<a href="index.html">首页</a>
@@ -91,6 +91,15 @@
             window.location.href = '/wap/sign-in.html';
         });
     });
+</script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
 </script>
 </body>
 </html>
