--- a/guide-line-lcrwt.html
+++ b/guide-line-lcrwt.html
@@ -35,7 +35,7 @@
     	<li>
         	<a href="javascript:;">如何进行投资？</a>
             <article>
-                <p>投标前需注意的事项：</p>
+              <p>投标前需注意的事项：</p>
 
 <p>1、认真阅读该借款列表的详细信息（包括贷款金额，利率，贷款期限、贷款者综合评级等），以确定您所要投的标符合您的投资周期要求、风险承受能力和所要求的投资回报率。</p>
 
@@ -161,5 +161,14 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/navigation.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
