--- a/sign-up.html
+++ b/sign-up.html
@@ -117,5 +117,14 @@
         });
     });
 </script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
