fixed bugs & pages update

--- a/guide-line-zqzr.html
+++ b/guide-line-zqzr.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <header>
-	<a class="returnBack" onClick="history.go(-1);"></a>
-<h2 class="pageTitle">债权转让</h2>
+	<a class="returnBack" href="index.html"></a>
+    <h2 class="pageTitle">债权转让</h2>
 	<nav class="menu">
     	<div>
         	<a href="index.html">首页</a>
