--- a/index.html
+++ b/index.html
@@ -1,159 +1,163 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
-<meta name="apple-mobile-web-app-capable" content="yes">
-<title></title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-<header>
-	<a href="sign-in.html" class="loginBtn topLogin">登录</a>
-	<a href="index.html" class="topLogo"></a>
-<nav class="menu">
-    	<div>
-        	<a href="index.html">首页</a>
-            <a href="sign-up.html">注册</a>
-            <a href="sign-in.html">登录</a>
-            <a href="guide-line.html">指南</a>
-            <a href="tel:4009099888">问客服</a>
-            <a href="" class="app-link">下载APP</a>
-        </div>
-        <div>
-        	<a href="index.html">首页</a>
-            <a href="guide-line.html">指南</a>
-            <a href="tel:4009099888">问客服</a>
-            <a href="user-account.html">我的账户</a>
-            <a href="javascript:void(0);" onClick="logout();">退出账户</a>
-            <a href="" class="app-link">下载APP</a>
-        </div>
-    </nav>
-</header>
-<section class="banner">
-	<img src="images/banner.png">
-    <a href="sign-up.html">注册有礼</a>
-</section>
-<section class="investmentData mg-5-15">
-    <span>累计投资额</span>
-    <span>投哪人已赚取</span>
-    <span class="deal"></span>
-    <span class="earn"></span>
-</section>
-<section class="mod mg-5-15">
-    <h2 class="title-common">
-        <a href="guide-line.html" class="fr btn">投哪指南</a>
-        在投哪网，为啥能轻松挣钱？
-    </h2>
-    <article class="text-common">
-        广发证券战略合作互联网理财平台，安全可靠！致力于提供优质、贴心的理财服务， 让您的闲钱赚起来！
-    </article>
-</section>
-<section class="mod mg-5-15">
-    <h2 class="title-common fColor1">
-        <em class="fr">
-            投标请下载APP
-            <a href="" class="btn">下载APP</a>
-        </em>
-        热门推荐
-    </h2>
-    <figure class="hotTender">
-        <i class="icons"></i>
-        <figcaption>新手专享</figcaption>
-        <span class="num">期限<i>1</i>个月 预期年化收益率<i>15</i>%</span>
-        <p class="text-common">为新注册用户精选高利率优质标</p>
-    </figure>
-    <figure class="hotTender">
-        <i class="icons"></i>
-        <figcaption>APP专享</figcaption>
-        <span class="num">期限<i>1</i>个月 预期年化收益率<i>13.2</i>%+</span>
-        <p class="text-common">打开投哪网理财APP，有特供好标</p>
-    </figure>
-    <figure class="hotTender">
-        <i class="icons">智</i>
-        <figcaption>智能投标</figcaption>
-        <span class="num">期限12个月 预期年化收益率12%</span>
-        <p class="text-common">稳健、便捷、高效，免利息管理费</p>
-    </figure>
-</section>
-<section class="mod2">
-    <h2 class="title-common">更多理财产品</h2>
-    <i class="ivtProd-prev-btn"></i>
-    <i class="ivtProd-next-btn"></i>
-    <div class="investmentProduct">
-    	<ul class="ivtProdList">
-        	<li class="cur">
-            	<i>投</i>
-                投投乐
-            </li>
-            <li>
-            	<i>多</i>
-                多多盈
-            </li>
-            <li>
-            	<i>车</i>
-                旺车贷
-            </li>
-            <li>
-            	<i>楼</i>
-                旺楼贷
-            </li>
-            <li>
-            	<i>薪</i>
-                旺薪贷
-            </li>
-        </ul>
-    </div>
-	<div class="ivtProdCon text-common"><b>投投乐：</b>大券商资管计划质押产品，期限短，免管理费</div>
-    <div class="ivtProdCon text-common"><b>多多盈：</b>股票配资产品，实时监管，安全可靠</div>
-    <div class="ivtProdCon text-common"><b>旺车贷：</b>小微企业车辆抵押贷款产品，信誉好，高盈利</div>
-    <div class="ivtProdCon text-common"><b>旺楼贷：</b>私营业主不动产抵押贷款产品，信誉好</div>
-    <div class="ivtProdCon text-common"><b>旺薪贷：</b>工薪阶层信用贷款，多重风控，严格审核</div>
-</section>
-<section class="mod2 partnership">
-    <h2 class="title-common">合作伙伴</h2>
-	<img src="images/partner1.jpg">
-    <img src="images/partner2.jpg">
-    <img src="images/partner3.jpg">
-    <img src="images/partner4.jpg">
-    <img src="images/partner5.jpg">
-    <img src="images/partner6.jpg">
-</section>
-<footer>
-	<i class="logo-footer"></i><br>
-    深圳投哪金融服务有限公司<br>
-    Copyright Reserved 2011-2015<br>
-    <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
-</footer>
-<aside class="appDownloadBar">
-	<i>&times;</i>
-	<a href="http://file.touna.cn/app/touna_licai_gwwap.apk" class="app-link-index"><em class="fColor2">投哪网理财</em> 投资挣钱，请点击下载APP</a>
-</aside>
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/navigation.js"></script>
-<script type="text/javascript" src="js/common.js"></script>
-<script type="text/javascript">
-    var today = new Date();
-    var url = "http://115.29.163.231/jsonfile/index_stat.html?t=2015130";
-    
-    Webapp.loadJsonData(url,
-        function(data) {
-            console.log(data);
-            $('.deal').html('<b>' + data.deal_account + '</b> 万元');
-            $('.earn').html('<b>' + data.earn_money + '</b> 万元')
-        }, 
-        function(e) {
-            console.log(e);
-    });
-</script>
-<script>
-    var _hmt = _hmt || [];
-    (function() {
-        var hm = document.createElement("script");
-        hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
-        var s = document.getElementsByTagName("script")[0]; 
-        s.parentNode.insertBefore(hm, s);
-    })();
-</script>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <title></title>
+        <link href="css/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <header>
+	       <a href="sign-in.html" class="loginBtn topLogin">登录</a>
+	       <a href="index.html" class="topLogo"></a>
+            <nav class="menu">
+            	<div>
+                	<a href="index.html">首页</a>
+                    <a href="sign-up.html">注册</a>
+                    <a href="sign-in.html">登录</a>
+                    <a href="guide-line.html">指南</a>
+                    <a href="tel:4009099888">问客服</a>
+                    <a href="" class="app-link">下载APP</a>
+                </div>
+                <div>
+                	<a href="index.html">首页</a>
+                    <a href="guide-line.html">指南</a>
+                    <a href="tel:4009099888">问客服</a>
+                    <a href="user-account.html">我的账户</a>
+                    <a href="javascript:void(0);" onClick="logout();">退出账户</a>
+                    <a href="" class="app-link">下载APP</a>
+                </div>
+            </nav>
+        </header>
+        <section class="banner">
+        	<img src="images/banner.png">
+            <a href="sign-up.html">注册有礼</a>
+        </section>
+        <section class="investmentData mg-5-15">
+            <span>累计投资额</span>
+            <span>投哪人已赚取</span>
+            <span class="deal"></span>
+            <span class="earn"></span>
+        </section>
+        <section class="mod mg-5-15">
+            <h2 class="title-common">
+                <a href="guide-line.html" class="fr btn">投哪指南</a>
+                在投哪网，为啥能轻松挣钱？
+            </h2>
+            <article class="text-common">
+                广发证券战略合作互联网理财平台，安全可靠！致力于提供优质、贴心的理财服务， 让您的闲钱赚起来！
+            </article>
+        </section>
+        <section class="mod mg-5-15">
+            <h2 class="title-common fColor1">
+                <em class="fr">
+                    投标请下载APP
+                    <a href="" class="btn app-link">下载APP</a>
+                </em>
+                热门推荐
+            </h2>
+            <figure class="hotTender">
+                <i class="icons"></i>
+                <figcaption>新手专享</figcaption>
+                <span class="num">期限<i>1</i>个月 预期年化收益率<i>15</i>%</span>
+                <p class="text-common">为新注册用户精选高利率优质标</p>
+            </figure>
+            <figure class="hotTender">
+                <i class="icons"></i>
+                <figcaption>APP专享</figcaption>
+                <span class="num">期限<i>1</i>个月 预期年化收益率<i>13.2</i>%+</span>
+                <p class="text-common">打开投哪网理财APP，有特供好标</p>
+            </figure>
+            <figure class="hotTender">
+                <i class="icons">智</i>
+                <figcaption>智能投标</figcaption>
+                <span class="num">期限12个月 预期年化收益率12%</span>
+                <p class="text-common">稳健、便捷、高效，免利息管理费</p>
+            </figure>
+        </section>
+        <section class="mod2">
+            <h2 class="title-common">更多理财产品</h2>
+            <i class="ivtProd-prev-btn"></i>
+            <i class="ivtProd-next-btn"></i>
+            <div class="investmentProduct">
+            	<ul class="ivtProdList">
+                	<li class="cur">
+                    	<i>投</i>
+                        投投乐
+                    </li>
+                    <li>
+                    	<i>多</i>
+                        多多盈
+                    </li>
+                    <li>
+                    	<i>车</i>
+                        旺车贷
+                    </li>
+                    <li>
+                    	<i>楼</i>
+                        旺楼贷
+                    </li>
+                    <li>
+                    	<i>薪</i>
+                        旺薪贷
+                    </li>
+                </ul>
+            </div>
+        	<div class="ivtProdCon text-common"><b>投投乐：</b>大券商资管计划质押产品，期限短，免管理费</div>
+            <div class="ivtProdCon text-common"><b>多多盈：</b>股票配资产品，实时监管，安全可靠</div>
+            <div class="ivtProdCon text-common"><b>旺车贷：</b>小微企业车辆抵押贷款产品，信誉好，高盈利</div>
+            <div class="ivtProdCon text-common"><b>旺楼贷：</b>私营业主不动产抵押贷款产品，信誉好</div>
+            <div class="ivtProdCon text-common"><b>旺薪贷：</b>工薪阶层信用贷款，多重风控，严格审核</div>
+        </section>
+        <section class="mod2 partnership">
+            <h2 class="title-common">合作伙伴</h2>
+        	<img src="images/partner1.jpg">
+            <img src="images/partner2.jpg">
+            <img src="images/partner3.jpg">
+            <img src="images/partner4.jpg">
+            <img src="images/partner5.jpg">
+            <img src="images/partner6.jpg">
+        </section>
+        <footer>
+        	<i class="logo-footer"></i><br>
+            深圳投哪金融服务有限公司<br>
+            Copyright Reserved 2011-2015<br>
+            <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
+        </footer>
+        <aside class="appDownloadBar">
+        	<i>&times;</i>
+        	<a href="http://file.touna.cn/app/touna_licai_gwwap.apk" class="app-link-index"><em class="fColor2">投哪网理财</em> 投资挣钱，请点击下载APP</a>
+        </aside>
+        <script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.10.1/jquery-1.10.1.min.js"></script>
+        <script type="text/javascript" src="js/navigation.js"></script>
+        <script type="text/javascript" src="js/common.js"></script>
+        <script type="text/javascript">   
+            (function() {
+                var today = new Date();
+                var url = "/jsonfile/index_stat.html?t=" + today.getFullYear() + today.getMonth() + 1 + today.getDate();
+                var timeOut = false; var ok = false;    
+                $.getJSON(url, function(jsondata) {             
+                     if(!timeOut){                               
+                        ok = true;
+                        console.log(jsondata);
+                        $('.deal').html('<b>' + (jsondata.deal_account/10000).toString().substr(0, 5) + '</b> 亿元');
+                        $('.earn').html('<b>' + jsondata.earn_money + '</b> 万元')
+                    }        
+                });
+                setTimeout(function(){              
+                    if(!ok) {           
+                        timeOut = true;         
+                        if(err_handle) err_handle(0);            
+                    }
+                },10000);
+
+                var _hmt = _hmt || [];
+                var hm = document.createElement("script");
+                hm.src = "//hm.baidu.com/hm.js?877d00ba98baf5c36f459bcf71c90419";
+                var s = document.getElementsByTagName("script")[0]; 
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
+    </body>
 </html>
