--- a/sign-up.html
+++ b/sign-up.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <header>
-	<a class="returnBack" onClick="history.go(-1);"></a>
+	<a class="returnBack" href="index.html"></a>
 	<div class="signInUp">
     	<a href="javascript:;">注册</a>
         <a href="sign-in.html">登录</a>
-  </div>
-	<nav class="menu">
+   </div>
+    <!-- <nav class="menu">
     	<div>
         	<a href="index.html">首页</a>
             <a href="sign-up.html">注册</a>
@@ -31,7 +31,7 @@
             <a href="javascript:;">退出账户</a>
             <a href="" class="app-link">下载APP</a>
         </div>
-    </nav>
+    </nav> -->
 </header>
 <section class="banner">
 	<img src="images/banner-signup.jpg">
@@ -65,16 +65,16 @@
     </div>
     <div class="iptbox idCodeBox">
     	<label>验证码</label>
-        <input id="validCode" name="" type="text" placeholder="请输入验证码">
+        <input id="validCode" name="" maxlength="6" stype="text" placeholder="请输入验证码">
         <input id="idCode" type="button" name="validCode" class="idCode flagCode" disabled="disabled" value="获取验证码">
     </div>
     <div class="iptbox">
     	<label>密码</label>
-        <input id="pw" name="" type="password" placeholder="设置密码">
+        <input id="pw" name="" type="password" placeholder="6-20位字符，须同时含字母和数字">
     </div>
     <div class="iptbox">
     	<label>确认</label>
-        <input id="pw-confirm" name="" type="password" placeholder="确认密码">
+        <input id="pw-confirm" name="" type="password" placeholder="再输入一次密码">
     </div>
     <div class="mg-0-15">
     	<br><br>
