--- a/user-account.html
+++ b/user-account.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <header>
-	<a class="returnBack" onClick="history.go(-1);"></a>
-  <h2 class="pageTitle">我的账户</h2>
+    <a class="returnBack" href="index.html"></a>
+    <h2 class="pageTitle">我的账户</h2>
 	<nav class="menu">
     	<div>
         	<a href="index.html">首页</a>
@@ -72,10 +72,8 @@
     <a href="javascript:;">移动站</a> | <a href="http://www.touna.cn/">电脑版</a>
 </footer>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/navigation.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript">
-
     $(function() {
         Webapp.postLoadData('/auth.do', {'method': 'isLogin'},
         function(data) {
@@ -83,15 +81,16 @@
             /* get user account info */
             getAccount();
             if(!data.result) {
-                window.location.href = '/wap/sign-in.html';
+                window.location.href = 'sign-in.html';
             }
         }, 
         function(e) {
             console.log(e);
-            window.location.href = '/wap/sign-in.html';
+            window.location.href = 'sign-in.html';
         });
     });
 </script>
+<script type="text/javascript" src="js/navigation.js"></script>
 <script>
 var _hmt = _hmt || [];
 (function() {
