--- a/sign-in.html
+++ b/sign-in.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <header>
-
+    <div class="loader">Loading...</div>
+    <div class="dialogs-shadow"></div>
 	<a class="returnBack" href="index.html"></a>
 	<div class="signInUp">
     	<a href="sign-up.html">注册</a>
