--- a/guide-line-cztx.html
+++ b/guide-line-cztx.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-	<a class="returnBack" href="index.html"></a>
+	<a class="returnBack" onclick="history.go(-1);"></a>
     <h2 class="pageTitle">充值提现</h2>
 	<nav class="menu">
     	<div>
